--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="IA international"
+APP_NAME="Entropia"
 APP_ENV=local
 APP_KEY=base64:mRs16klinLgJYCVKVWTQsCt0sEMmSIpoO7Iz6zHsO74=
 APP_DEBUG=true
@@ -27,7 +27,7 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
 API_STANDARDS_TREE=vnd
-API_SUBTYPE=ia-international
+API_SUBTYPE=entropia
 API_PREFIX=api
 API_DOMAIN=http://entropia.local
 API_NAME="ENTROPIA API"
